<resources>
    <string name="app_name">WhatsApp</string>
    <string name="welcome">Welcome Back!</string>
    <string name="sign_in_to_continue">Login to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="sign_in">Sign in</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="nickname">Nickname</string>
    <string name="add_image">Add Image</string>
    <string name="sign_up">Sign Up</string>
    <string name="BaseUrl">https://2dbf-132-70-1-38.eu.ngrok.io/</string>
    <string name="select_user">select user</string>
    <string name="chat_app">Chat App</string>
    <string name="type_a_message">Type a message</string>
    <string name="server">Server</string>
    <string name="new_contact">New Contact</string>
    <string name="add_new_contact">Add new contact</string>
    <string name="change">Change</string>
    <string name="settings">Settings</string>
</resources>